[project]
name = "cql-ffi-safe"
version = "0.0.2"
authors = ["Tupshin Harper <tupshin@tupshin.com>"]

[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[lib]
name = "cql_ffi_safe"
path = "src/lib.rs"

[dependencies.cql_ffi]
git = "https://github.com/tupshin/cql-ffi"

[dependencies.uuid]
uuid = "0.1.7"
