[project]
name = "cql-ffi-safe"
description = "A safe wrapper of the cql-ffi crate"
license = "Apache-2.0"
homepage = "https://github.com/tupshin/cql-ffi"
repository = "https://github.com/tupshin/cql-ffi"
version = "0.0.3"

authors = ["Tupshin Harper <tupshin@tupshin.com>"]

[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[lib]
name = "cql_ffi_safe"
path = "src/lib.rs"

[dependencies.cql_ffi]
cql_ffi = "0.0.3"

[dependencies.uuid]
uuid = "0.1.7"
